# ros_camera_server_benchmark

./: .gitignore  CMakeLists.txt  METHODOLOGY.md  README.md  REPRODUCING.md  RESULTS.md  package.xml
config/: rcs_ros_jpeg.yaml  rcs_ros_jpeg_webrtc.yaml  rcs_ros_raw.yaml  rcs_ros_raw_webrtc.yaml  rcs_v4l2_mjpeg.yaml  rcs_v4l2_mjpeg_decoded.yaml  rcs_v4l2_mjpeg_decoded_rtp.yaml  rcs_v4l2_mjpeg_rosonly.yaml  rcs_v4l2_mjpeg_rtponly.yaml  rcs_v4l2_yuv.yaml  rcs_v4l2_yuv_both_webrtc.yaml  rcs_v4l2_yuv_rosonly.yaml  rcs_v4l2_yuv_rtponly.yaml  rcs_v4l2_yuv_webrtc.yaml
include/ros_camera_server_benchmarks/: frame_render.hpp  marker.hpp  mjpeg_encode.hpp  recv_loop.hpp  ros_recv_internals.hpp  time_util.hpp
launch/: ffmpeg_h264_yuv.launch.yaml  ffmpeg_recv.launch.yaml  gscam2_only_mjpeg.launch.yaml  gscam2_only_yuv.launch.yaml  rcs.launch.yaml  rtsp_camera_proxy_recv.launch.yaml  rtsp_h264_ros_raw.launch.yaml  rtsp_h264_yuv.launch.yaml  usb_cam_only_mjpeg.launch.yaml  usb_cam_only_yuv.launch.yaml  web_video_server_mjpeg_ros_raw.launch.yaml  web_video_server_mjpeg_yuv.launch.yaml
results/notebook/results/run1/: report.csv
results/notebook/results/run1/cam-both-gscam+gst_bridge-mjpeg-rtp/: cpu.csv  frame_gen_stats.csv  ros_raw.csv  ros_raw.csv.stats  stream.csv  summary.json
results/notebook/results/run1/cam-both-gscam+gst_bridge-yuv-rtp/: cpu.csv  frame_gen_stats.csv  ros_raw.csv  ros_raw.csv.stats  stream.csv  summary.json
results/notebook/results/run1/cam-both-rcs-mjpeg-decoded-rtp/: cpu.csv  frame_gen_stats.csv  ros_raw.csv  ros_raw.csv.stats  stream.csv  summary.json
results/notebook/results/run1/cam-both-rcs-mjpeg-rtp/: cpu.csv  frame_gen_stats.csv  ros_jpeg.csv  stream.csv  stream.csv.stats  summary.json
results/notebook/results/run1/cam-both-rcs-yuv-rtp/: cpu.csv  frame_gen_stats.csv  ros_raw.csv  stream.csv  summary.json
results/notebook/results/run1/cam-both-rcs-yuv-webrtc/: cpu.csv  frame_gen_stats.csv  ros_raw.csv  ros_raw.csv.stats  stream.csv  summary.json
results/notebook/results/run1/cam-both-usb_cam+gst_bridge-mjpeg-rtp/: cpu.csv  frame_gen_stats.csv  ros_raw.csv  stream.csv  summary.json
results/notebook/results/run1/cam-both-usb_cam+gst_bridge-yuv-rtp/: cpu.csv  frame_gen_stats.csv  ros_raw.csv  stream.csv  summary.json
results/notebook/results/run1/cam-both-usb_cam+rtsp_fkie-yuv-h264/: cpu.csv  frame_gen_stats.csv  ros_raw.csv  ros_raw.csv.stats  stream.csv  summary.json
results/notebook/results/run1/cam-ros-gscam-mjpeg/: cpu.csv  frame_gen_stats.csv  ros_raw.csv  summary.json
results/notebook/results/run1/cam-ros-gscam-yuv/: cpu.csv  frame_gen_stats.csv  ros_raw.csv  summary.json
results/notebook/results/run1/cam-ros-rcs-mjpeg/: cpu.csv  frame_gen_stats.csv  ros_jpeg.csv  ros_jpeg.csv.stats  summary.json
results/notebook/results/run1/cam-ros-rcs-mjpeg-decoded/: cpu.csv  frame_gen_stats.csv  ros_raw.csv  summary.json
results/notebook/results/run1/cam-ros-rcs-yuv/: cpu.csv  frame_gen_stats.csv  ros_raw.csv  ros_raw.csv.stats  summary.json
results/notebook/results/run1/cam-ros-usb_cam-mjpeg/: cpu.csv  frame_gen_stats.csv  ros_raw.csv  summary.json
results/notebook/results/run1/cam-ros-usb_cam-yuv/: cpu.csv  frame_gen_stats.csv  ros_raw.csv  summary.json
results/notebook/results/run1/cam-stream-floor/: cpu.csv  frame_gen_stats.csv  stream.csv  summary.json
results/notebook/results/run1/cam-stream-gscam+gst_bridge-yuv-rtp/: cpu.csv  frame_gen_stats.csv  stream.csv  stream.csv.stats  summary.json
results/notebook/results/run1/cam-stream-rcs-yuv-rtp/: cpu.csv  frame_gen_stats.csv  stream.csv  stream.csv.stats  summary.json
results/notebook/results/run1/cam-stream-rcs-yuv-webrtc/: cpu.csv  frame_gen_stats.csv  stream.csv  stream.csv.stats  summary.json
results/notebook/results/run1/cam-stream-usb_cam+gst_bridge-yuv-rtp/: cpu.csv  frame_gen_stats.csv  stream.csv  summary.json
results/notebook/results/run1/cam-stream-usb_cam+rtsp_fkie-yuv-h264/: cpu.csv  frame_gen_stats.csv  stream.csv  summary.json
results/notebook/results/run1/cam-stream-usb_cam+web_video_server-yuv-mjpeg/: cpu.csv  frame_gen_stats.csv  stream.csv  summary.json
results/notebook/results/run1/ros-stream-gst_bridge-raw-rtp/: cpu.csv  ros_pub_stats.csv  stream.csv  summary.json
results/notebook/results/run1/ros-stream-rcs-jpeg-rtp/: cpu.csv  rcs_config.yaml  ros_pub_stats.csv  stream.csv  summary.json
results/notebook/results/run1/ros-stream-rcs-jpeg-webrtc/: cpu.csv  ros_pub_stats.csv  stream.csv  summary.json
results/notebook/results/run1/ros-stream-rcs-raw-rtp/: cpu.csv  ros_pub_stats.csv  stream.csv  summary.json
results/notebook/results/run1/ros-stream-rcs-raw-webrtc/: cpu.csv  ros_pub_stats.csv  stream.csv  stream.csv.stats  summary.json
results/notebook/results/run1/ros-stream-rtsp_fkie-raw-h264/: cpu.csv  ros_pub_stats.csv  stream.csv  summary.json
results/notebook/results/run1/ros-stream-web_video_server-raw-mjpeg/: cpu.csv  stream.csv  summary.json
results/notebook/results/run10/: report.csv
results/notebook/results/run10/cam-both-gscam+gst_bridge-mjpeg-rtp/: cpu.csv  frame_gen_stats.csv  ros_raw.csv  stream.csv  summary.json
results/notebook/results/run10/cam-both-rcs-mjpeg-rtp/: cpu.csv  (+5 more)
results/notebook/results/run2/: report.csv
results/notebook/results/run3/: report.csv
results/notebook/results/run4/: report.csv
results/notebook/results/run5/: report.csv
results/notebook/results/run6/: report.csv
results/notebook/results/run7/: report.csv
results/notebook/results/run8/: report.csv
results/notebook/results/run9/: report.csv
scripts/: bench_summary.py  plot_results.py  run_all.sh  run_scenario.sh  setup_loopback.sh
scripts/helpers/: bench_aggregate.py  check_cpu_governor.sh  cpu_sample.py  env_fairness.sh  resolve_encoder.sh
src/: frame_gen.cpp  frame_render.cpp  gst_recv.cpp  marker.cpp  recv_loop.cpp  ros_pub.cpp  ros_recv.cpp  ros_recv_internals.cpp  v4l2loopback_timeperframe_shim.c  vaapi_drm_redirect_shim.c  webrtc_recv.cpp
test/: test_marker_roundtrip.cpp  test_mjpeg_subsampling.cpp  test_recv_loop.cpp
(+1235 files in other folders)
