<?xml version='1.0' encoding='UTF-8'?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_camera_server_benchmarks</name>
  <version>0.0.1</version>
  <description>End-to-end latency benchmark harness for ros_camera_server vs. alternative ROS 2 camera stacks.</description>
  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>
  <license>AGPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libgstreamer-plugins-bad1.0-dev</build_depend>
  <build_depend>libgstreamer-plugins-base1.0-dev</build_depend>
  <build_depend>libgstreamer1.0-dev</build_depend>
  <build_depend>libjpeg-turbo8-dev</build_depend>
  <build_depend>libsoup-3.0-dev</build_depend>
  <build_depend>nlohmann-json3-dev</build_depend>

  <depend>image_transport</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>gscam2</exec_depend>
  <exec_depend>gst_bridge</exec_depend>
  <exec_depend>gstreamer1.0-libav</exec_depend>
  <exec_depend>gstreamer1.0-plugins-bad</exec_depend>
  <exec_depend>gstreamer1.0-plugins-base</exec_depend>
  <exec_depend>gstreamer1.0-plugins-good</exec_depend>
  <!--Stacks-under-test. Each scenario in run_scenario.sh requires its own        subset; missing packages cause that scenario to be skipped at runtime        (run_scenario.sh preflight). gst_bridge has no rosdep key on most        distros and must be source-built; see REPRODUCING.md.        web_video_server and rtsp_image_transport scenarios are skipped if        their packages are absent.-->
  <exec_depend>ros_camera_server</exec_depend>
  <exec_depend>rtsp_image_transport</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>v4l-utils</exec_depend>
  <exec_depend>web_video_server</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
